--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.1.0"
     }
 }
